[package]
name = "highlight-pulldown"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Process pulldown-cmark events to apply syntax highlighting to code blocks"
keywords = ["markdown", "highlighter", "syntax-highlighting"]
categories = ["text-processing"]
publish = ["vichava"]

[dependencies]
syntect = "5.0.0"
pulldown-cmark = "0.10.0"
thiserror = "1.0.43"
